@@ -63,7 +63,7 @@ AC_ARG_ENABLE(ansi, [  --enable-ansi           turn on strict ansi [default=no]]
 		    , enable_ansi=no)
 AC_ARG_WITH(glib, [  --with-glib=DIR         Use uninstalled copy of glib])
 AC_ARG_ENABLE(xim, [  --enable-xim            support XIM [default=yes]],
-			echo $enable_xim, enable_xim="yes")
+			, enable_xim="yes")
 AC_ARG_WITH(locale, [  --with-locale=LOCALE    locale name you want to use ])
 
 AC_ARG_WITH(xinput, [  --with-xinput=[no/gxi/xfree] support XInput ])
@@ -162,10 +162,6 @@ AC_TRY_COMPILE([#include <dirent.h>], [DIR *dir;],
     AC_MSG_RESULT()
     CFLAGS=$gtk_save_CFLAGS
     AC_MSG_WARN([Could not determine POSIX flag. (-posix didn't work.)])))
-
-if test "x$enable_xim" = "xyes"; then
-  GTK_XIM_FLAGS="-DUSE_XIM"
-fi
 
 if test x$with_glib = xyes ; then
   AC_MSG_ERROR([
@@ -272,6 +268,17 @@ AC_CHECK_LIB(X11, XConvertCase,
       AC_DEFINE(HAVE_XCONVERTCASE),
       ,
       $x_libs)
+
+# Check for XIM support.
+
+AC_CHECK_LIB(X11, XUnregisterIMInstantiateCallback,
+	    ,
+	    enable_xim=no,
+	    $x_libs)
+
+if test "x$enable_xim" = "xyes"; then
+  GTK_XIM_FLAGS="-DUSE_XIM"
+fi
 
 x_cflags="$X_CFLAGS"
 x_ldflags="$X_LDFLAGS $X_LIBS"
